make server source global so that tests can include it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHERMES_TIMER")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHERMES_TRACE")
 
 # Source files
-set(SYMBIOS_COMMON_SRC include/symbios/common/data_structure.h include/symbios/common/configuration_manager.h src/symbios/common/data_structure.cpp common/src/common/debug.cpp common/include/common/debug.h)
+set(SYMBIOS_COMMON_SRC ${CMAKE_SOURCE_DIR}/include/symbios/common/data_structure.h ${CMAKE_SOURCE_DIR}/include/symbios/common/configuration_manager.h ${CMAKE_SOURCE_DIR}/src/symbios/common/data_structure.cpp ${CMAKE_SOURCE_DIR}/common/src/common/debug.cpp ${CMAKE_SOURCE_DIR}/common/include/common/debug.h)
 set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} include/symbios/client/client.h src/symbios/client/client.cpp
         src/symbios/client/posix.cpp )
 
@@ -35,21 +35,21 @@ target_link_libraries(symbios -lbasket -lrpc)
 # TODO: add any required libraries
 
 # add symbios server
-set(SYMBIOS_SERVER_SRC ${SYMBIOS_COMMON_SRC} src/symbios/server/main.cpp
-        src/symbios/server/server.h src/symbios/server/server.cpp
-        src/symbios/io_clients/io.h src/symbios/io_clients/io_factory.h
-        src/symbios/io_clients/file_io.h src/symbios/io_clients/file_io.cpp
-        src/symbios/io_clients/redis_io.h src/symbios/io_clients/redis_io.cpp
-        src/symbios/io_clients/mongo_io.h src/symbios/io_clients/mongo_io.cpp
-        src/symbios/data_distribution/data_distribution.h src/symbios/data_distribution/data_distribution_factory.h
-        src/symbios/data_distribution/dp_dde.h src/symbios/data_distribution/dp_dde.cpp
-        src/symbios/data_distribution/heuristics_dde.h src/symbios/data_distribution/heuristics_dde.cpp
-        src/symbios/data_distribution/random_dde.h src/symbios/data_distribution/random_dde.cpp
-        src/symbios/data_distribution/round_robin_dde.h src/symbios/data_distribution/round_robin_dde.cpp
-        src/symbios/metadata_orchestrator/metadata_orchestrator.h src/symbios/metadata_orchestrator/metadata_orchestrator.cpp
-        src/symbios/server/daemon.cpp src/symbios/server/daemon.h)
+set(SYMBIOS_SERVER_SRC ${SYMBIOS_COMMON_SRC}
+        ${CMAKE_SOURCE_DIR}/src/symbios/server/server.h ${CMAKE_SOURCE_DIR}/src/symbios/server/server.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/io.h ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/io_factory.h
+        ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/file_io.h ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/file_io.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/redis_io.h ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/redis_io.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/mongo_io.h ${CMAKE_SOURCE_DIR}/src/symbios/io_clients/mongo_io.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/data_distribution.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/data_distribution_factory.h
+        ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/dp_dde.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/dp_dde.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/heuristics_dde.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/heuristics_dde.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/random_dde.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/random_dde.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/round_robin_dde.h ${CMAKE_SOURCE_DIR}/src/symbios/data_distribution/round_robin_dde.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/metadata_orchestrator/metadata_orchestrator.h ${CMAKE_SOURCE_DIR}/src/symbios/metadata_orchestrator/metadata_orchestrator.cpp
+        ${CMAKE_SOURCE_DIR}/src/symbios/server/daemon.cpp ${CMAKE_SOURCE_DIR}/src/symbios/server/daemon.h)
 
-add_executable(symbios_server ${SYMBIOS_SERVER_SRC})
+add_executable(symbios_server ${SYMBIOS_SERVER_SRC} ${CMAKE_SOURCE_DIR}/src/symbios/server/main.cpp)
 add_dependencies(symbios_server symbios)
 target_link_libraries(symbios_server -lmpi -lhiredis -lbasket -lrpc -lredis++ -lmongoc-1.0 -lbson-1.0 -lbsoncxx -lboost_system -lboost_filesystem  -lmongocxx -lpthread)
 # TODO: add any required libraries
