--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -9,10 +9,25 @@ include_directories(${CMAKE_SOURCE_DIR})
 set(CTEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/")
 set($ENV{LD_PRELOAD} "$ENV{LD_PRELOAD} ${CMAKE_BINARY_DIR}")
 
+set(test_files dde)
+foreach (test_file ${test_files})
+    set(exec ${test_file})
+    add_executable(${exec} ${test_file}/test.cpp ${SYMBIOS_SERVER_SRC})
+    add_dependencies(${exec} symbios)
+    target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
+    target_link_libraries(${exec} ${LIBS})
+    target_link_libraries(${exec} symbios)
+    set_target_properties(${exec} PROPERTIES FOLDER test/integration)
+    set(test_name ${test_file}_test)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
+endforeach ()
+
+
 set(test_files cm1_kmeans wrf)
 foreach (test_file ${test_files})
     set(exec ${test_file})
-    add_executable(${exec} apps/${test_file}/test.cpp)
+    add_executable(${exec} apps/${test_file}/test.cpp ${SYMBIOS_SERVER_SRC})
     add_dependencies(${exec} symbios)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${LIBS})
