Use absolute path

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -101,7 +101,7 @@ function(io_test nprocs storage_type caddr cport block_size file_size total_io a
             mpirun -n ${nprocs} ${CMAKE_CURRENT_BINARY_DIR}/benchmark
             -s ${storage_type} -caddr ${caddr} -cport ${cport} -path /test.bin
             -w io-only -ap ${access_pattern} -bs ${block_size} -fs ${file_size} -tot ${total_io} -wfrac ${wfrac} -rfrac ${rfrac} -seed 2542
-            -out ~/test_${config}.csv)
+            -out /home/llogan/test_${config}.csv)
 endfunction()
 
 set(PROCS 1 2 4 8 16 32 40)
