--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHERMES_TRACE")
 set(SYMBIOS_COMMON_SRC ${CMAKE_SOURCE_DIR}/include/symbios/common/data_structure.h ${CMAKE_SOURCE_DIR}/include/symbios/common/configuration_manager.h ${CMAKE_SOURCE_DIR}/src/symbios/common/data_structure.cpp ${CMAKE_SOURCE_DIR}/common/src/common/debug.cpp
         ${CMAKE_SOURCE_DIR}/common/include/common/debug.h ${CMAKE_SOURCE_DIR}/common/include/common/arguments.h)
 set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} include/symbios/client/client.h src/symbios/client/client.cpp
-        src/symbios/client/posix.cpp )
+        src/symbios/client/posix.cpp common/test/unit/args/test.cpp)
 
 # add symbios lib
 add_library(symbios SHARED ${SYMBIOS_LIB_SRC})
@@ -57,6 +57,7 @@ target_link_libraries(symbios_server -lmpi -lhiredis -lbasket -lrpc -lredis++ -l
 
 # add benchmark tool
 add_subdirectory(benchmark)
+add_subdirectory(common/test)
 
 option(BUILD_TEST "Build the unit tests" ON)
 if(BUILD_TEST)
