--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,6 +13,8 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
+    container:
+      image: jcernuda/symbios:1.0.0
     strategy:
       matrix:
         mongodb-version: [4.4]
@@ -32,118 +34,21 @@ jobs:
               - 6379:6379
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
     - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
+      echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
+      echo "runner.workspace: ${{runner.workspace}}"
+      echo "INSTALL_DIR: ${INSTALL_DIR}"
+      echo "PATH: ${PATH}"
+      echo "LD_LIBRARY_PATH: ${LD_LIBRARY_PATH}"
+      echo "CFLAGS: ${CFLAGS}"
+      echo "CXXFLAGS: ${CXXFLAGS}"
+      echo "LDFLAGS: ${LDFLAGS}"
       run: cmake -E make_directory ${{runner.workspace}}/build
       
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.3.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
-
-    - name: Install dependencies
-      shell: bash
-      run: |
-        export SOFTWARE_DIR=$HOME/software
-        export INSTALL_DIR=${SOFTWARE_DIR}/install
-        export CURRENT=`pwd`
-
-        mkdir -p $SOFTWARE_DIR
-        mkdir -p $SOFTWARE_DIR/source
-        mkdir -p ${INSTALL_DIR}
-
-        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
-        export LD_LIBRARY_PATH=${INSTALL_DIR}/lib:${INSTALL_DIR}/lib64:${LD_LIBRARY_PATH}
-        export CFLAGS="-I${INSTALL_DIR}/include $CFLAGS"
-        export CXXFLAGS="-I${INSTALL_DIR}/include $CXXFLAGS"
-        export LDFLAGS="$LDFLAGS -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib64"
-
-        ###################### RapidJson ######################
-        cd $SOFTWARE_DIR/source
-        git clone https://github.com/Tencent/rapidjson
-        cd rapidjson
-        mkdir build
-        cd build
-        cmake -DCMAKE_INSTALL_PREFIX=${SOFTWARE_DIR}/install ../
-        make -j8
-        make install
-        ###################### MPI ######################
-        cd $SOFTWARE_DIR/source
-        wget http://www.mpich.org/static/downloads/3.3.2/mpich-3.3.2.tar.gz
-        tar zxf mpich-3.3.2.tar.gz
-        cd ${SOFTWARE_DIR}/source/mpich-3.3.2/
-        ./configure --prefix=${SOFTWARE_DIR}/install
-        #According to this, we have two cores. https://docs.github.com/en/actions/reference/virtual-environments-for-github-hosted-runners
-        make -j 2
-        make install
-        ###################### Boost ######################
-        cd $SOFTWARE_DIR/source
-        wget https://dl.bintray.com/boostorg/release/1.74.0/source/boost_1_74_0.tar.gz
-        tar xvf boost_1_74_0.tar.gz
-        cd boost_1_74_0
-        ./bootstrap.sh --prefix=${SOFTWARE_DIR}/install
-        ./b2 -j4 install
-        ###################### RpcLib ######################
-        cd $SOFTWARE_DIR/source
-        wget https://github.com/rpclib/rpclib/archive/v2.2.1.tar.gz
-        tar -xvf v2.2.1.tar.gz
-        cd rpclib-2.2.1
-        sed -i 's/add_library(${PROJECT_NAME}/add_library(${PROJECT_NAME} SHARED/g' CMakeLists.txt
-        mkdir build
-        cd build
-        cmake -DCMAKE_INSTALL_PREFIX=${SOFTWARE_DIR}/install ../
-        make -j 2
-        make install
-        ###################### HCL ######################
-        cd $SOFTWARE_DIR/source
-        git clone https://bitbucket.org/scs-io/hcl
-        cd hcl
-        git checkout -b release/0.0.4
-        mkdir build
-        cd build
-        cmake -DCMAKE_INSTALL_PREFIX:PATH=${SOFTWARE_DIR}/install -DBASKET_ENABLE_RPCLIB=true ..
-        make -j 2
-        make install
-        ###################### Redis Clients ######################
-        ### CRedis ###
-        cd $SOFTWARE_DIR/source
-        wget https://github.com/redis/hiredis/archive/v1.0.0.tar.gz
-        tar -xzf v1.0.0.tar.gz
-        cd hiredis*
-        make
-        sed -i 's&INSTALL_INCLUDE_PATH= $(DESTDIR)$(PREFIX)/$(INCLUDE_PATH)&INSTALL_INCLUDE_PATH=$(PREFIX)/include/hiredis&g' ./Makefile
-        sed -i 's&INSTALL_LIBRARY_PATH= $(DESTDIR)$(PREFIX)/$(LIBRARY_PATH)&INSTALL_LIBRARY_PATH=$(PREFIX)/lib&g' ./Makefile
-        sed -i 's&INSTALL_PKGCONF_PATH= $(INSTALL_LIBRARY_PATH)/$(PKGCONF_PATH)&INSTALL_PKGCONF_PATH=$(INSTALL_LIBRARY_PATH)/pkgconfig&g' ./Makefile
-        make PREFIX=${SOFTWARE_DIR}/install install
-        ### C++ Redis ###
-        cd $SOFTWARE_DIR/source
-        wget https://github.com/sewenew/redis-plus-plus/archive/1.1.2.tar.gz
-        tar -xzf 1.1.2.tar.gz
-        cd redis-plus-plus*
-        mkdir build
-        cd build
-        cmake -DREDIS_PLUS_PLUS_CXX_STANDARD=17 -DCMAKE_PREFIX_PATH=${SOFTWARE_DIR}/install -DCMAKE_INSTALL_PREFIX=${SOFTWARE_DIR}/install -DCMAKE_BUILD_TYPE=Release ../
-        make
-        make install
-        ###################### Mongo Clients ######################
-        ### Mongodb C Driver ###
-        cd $SOFTWARE_DIR/source
-        wget https://github.com/mongodb/mongo-c-driver/releases/download/1.17.0/mongo-c-driver-1.17.0.tar.gz
-        tar -xzf mongo-c-driver-1.17.0.tar.gz
-        cd mongo-c-driver-1.17.0/build
-        cmake -DCMAKE_INSTALL_PREFIX=${SOFTWARE_DIR}/install -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF ../
-        make -j8
-        cmake --build . --target install
-        ### Mongodb C++ Driver ###
-        cd $SOFTWARE_DIR/source
-        curl -OL https://github.com/mongodb/mongo-cxx-driver/archive/r3.5.1.tar.gz
-        tar -xzf r3.5.1.tar.gz
-        cd mongo-cxx-driver-r3.5.1/build
-        cmake .. -DCMAKE_PREFIX_PATH=${SOFTWARE_DIR}/install -DBUILD_VERSION=3.5.1 -DCMAKE_INSTALL_PREFIX=${SOFTWARE_DIR}/install -DCMAKE_CXX_STANDARD=17 -DBSONCXX_POLY_USE_BOOST=1 -DCMAKE_BUILD_TYPE=Release
-        make -j8
-        cmake --build . --target install
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -154,13 +59,6 @@ jobs:
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: |
-        export INSTALL_DIR=$HOME/software/install
-        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
-        export LD_LIBRARY_PATH=${INSTALL_DIR}/lib:${INSTALL_DIR}/lib64:${LD_LIBRARY_PATH}
-        export CFLAGS="-I${INSTALL_DIR}/include $CFLAGS"
-        export CXXFLAGS="-I${INSTALL_DIR}/include $CXXFLAGS"
-        export LDFLAGS="$LDFLAGS -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib64"
-
         cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
@@ -168,13 +66,6 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: |
-        export INSTALL_DIR=$HOME/software/install
-        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
-        export LD_LIBRARY_PATH=${INSTALL_DIR}/lib:${INSTALL_DIR}/lib64:${LD_LIBRARY_PATH}
-        export CFLAGS="-I${INSTALL_DIR}/include $CFLAGS"
-        export CXXFLAGS="-I${INSTALL_DIR}/include $CXXFLAGS"
-        export LDFLAGS="$LDFLAGS -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib64"
-
         cmake --build . --config $
     - name: Test
       working-directory: ${{runner.workspace}}/build
@@ -182,11 +73,23 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        export INSTALL_DIR=$HOME/software/install
-        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
-        export LD_LIBRARY_PATH=${INSTALL_DIR}/lib:${INSTALL_DIR}/lib64:${LD_LIBRARY_PATH}
-        export CFLAGS="-I${INSTALL_DIR}/include $CFLAGS"
-        export CXXFLAGS="-I${INSTALL_DIR}/include $CXXFLAGS"
-        export LDFLAGS="$LDFLAGS -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib64"
+#        export INSTALL_DIR=$HOME/software/install
+#        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
+#        export LD_LIBRARY_PATH=${INSTALL_DIR}/lib:${INSTALL_DIR}/lib64:${LD_LIBRARY_PATH}
+#        export CFLAGS="-I${INSTALL_DIR}/include $CFLAGS"
+#        export CXXFLAGS="-I${INSTALL_DIR}/include $CXXFLAGS"
+#        export LDFLAGS="$LDFLAGS -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib64"
+        source_dir=${GITHUB_WORKSPACE}
+        log_dir=${HOME}/work/log
+        mkdir -p $log_dir
 
-        ctest -C $BUILD_TYPE
+        echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf" > ${log_dir}/server.log
+        nohup ${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf >> ${log_dir}/server.log 2>&1 &
+        SERVER_PID=$!
+        echo $SERVER_PID > ${log_dir}/server.lock
+        sleep 5
+        $source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf
+
+        kill `cat ${log_dir}/server.lock`
+        rm ${log_dir}/server.lock
+#        ctest -C $BUILD_TYPE
