--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,15 +35,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Create Build Environment
-      echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
-      echo "runner.workspace: ${{runner.workspace}}"
-      echo "INSTALL_DIR: ${INSTALL_DIR}"
-      echo "PATH: ${PATH}"
-      echo "LD_LIBRARY_PATH: ${LD_LIBRARY_PATH}"
-      echo "CFLAGS: ${CFLAGS}"
-      echo "CXXFLAGS: ${CXXFLAGS}"
-      echo "LDFLAGS: ${LDFLAGS}"
-      run: cmake -E make_directory ${{runner.workspace}}/build
+      run: |
+        echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
+        echo "runner.workspace: ${{runner.workspace}}"
+        echo "INSTALL_DIR: ${INSTALL_DIR}"
+        echo "PATH: ${PATH}"
+        echo "LD_LIBRARY_PATH: ${LD_LIBRARY_PATH}"
+        echo "CFLAGS: ${CFLAGS}"
+        echo "CXXFLAGS: ${CXXFLAGS}"
+        echo "LDFLAGS: ${LDFLAGS}"
+        cmake -E make_directory ${{runner.workspace}}/build
       
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.3.0
