--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,7 +14,9 @@ jobs:
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
     container:
-      image: jcernuda/symbios:1.0.0
+      image: jcernuda/symbios:1.0.1
+      env:
+        GITHUB_WORKSPACE:${HOME}/work/
     strategy:
       matrix:
         mongodb-version: [4.4]
