--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,7 +14,7 @@ jobs:
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
     container:
-      image: jcernuda/symbios:1.0.0
+      image: jcernuda/test:3
     strategy:
       matrix:
         mongodb-version: [4.4]
@@ -61,16 +61,12 @@ jobs:
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: |
         cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      env:
-        GITHUB_WORKSPACE: ${HOME}/work/
     - name: Build
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: |
         cmake --build . --config $
-      env:
-        GITHUB_WORKSPACE: ${HOME}/work/
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
