--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,8 +59,9 @@ jobs:
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: |
-        mkdir -p $GITHUB_WORKSPACE/symbios/build
-        cd $GITHUB_WORKSPACE/symbios/build
+        export GITHUB_WORKSPACE=$HOME/work/
+        mkdir -p $GITHUB_WORKSPACE/build
+        cd $GITHUB_WORKSPACE/build
         cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
     - name: Build
       working-directory: ${{runner.workspace}}/build
