--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,9 +32,16 @@ jobs:
             #ports:
               # Maps port 6379 on service container to the host
               #- 6379:6379
+    #- name: Start MongoDB
+      #uses: supercharge/mongodb-github-action@1.3.0
+      #with:
+        #mongodb-version: ${{ matrix.mongodb-version }}
+
     steps:
     - uses: actions/checkout@v2
     - name: Create Build Environment
+      env:
+        GITHUB_WORKSPACE: ${{runner.workspace}}
       run: |
         echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
         echo "runner.workspace: ${{runner.workspace}}"
@@ -44,31 +51,11 @@ jobs:
         echo "CFLAGS: ${CFLAGS}"
         echo "CXXFLAGS: ${CXXFLAGS}"
         echo "LDFLAGS: ${LDFLAGS}"
-        cmake -E make_directory ${{runner.workspace}}/build
-      
-    #- name: Start MongoDB
-      #uses: supercharge/mongodb-github-action@1.3.0
-      #with:
-        #mongodb-version: ${{ matrix.mongodb-version }}
-
-    - name: Configure CMake
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
-      shell: bash
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: |
-        export GITHUB_WORKSPACE=$HOME/work/
-        mkdir -p $GITHUB_WORKSPACE/build
-        cd $GITHUB_WORKSPACE/build
-        cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-    - name: Build
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: |
+        mkdir -p ${{runner.workspace}}/build
+        cd ${{runner.workspace}}/build
+        cmake ${{runner.workspace}} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
         cmake --build . --config $
+    
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
