--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -51,9 +51,9 @@ jobs:
         echo "CFLAGS: ${CFLAGS}"
         echo "CXXFLAGS: ${CXXFLAGS}"
         echo "LDFLAGS: ${LDFLAGS}"
-        mkdir -p ${{runner.workspace}}/build
-        cd ${{runner.workspace}}/build
-        cmake ${{runner.workspace}} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+        mkdir -p ${GITHUB_WORKSPACE}/build
+        cd ${GITHUB_WORKSPACE}/build
+        cmake ${GITHUB_WORKSPACE} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
         cmake --build . --config $
     
     - name: Test
