--- a/conf/symbios.conf
+++ b/conf/symbios.conf
@@ -3,5 +3,17 @@
   "CLIENT_LISTS": "/tmp/tmp.BUKlhPiLxF/conf/server_lists/symbios_client" ,
   "SYMBIOS_PORT": 9000,
   "SERVER_RPC_THREADS": 10,
-  "SERVER_DIR": "/dev/shm/hari/symbios_server"
+  "SERVER_DIR": "/dev/shm/hari/symbios_server",
+  "POSIX_MOUNT_POINT":"/tmp/tmp.BUKlhPiLxF/conf/symbios.conf",
+  "RANDOM_SEED":100,
+  "STORAGE_SOLUTIONS" : [
+      "FileStorageSolution" : {
+          "MOUNT" : "/home/hdevarajan/pfs/meta"
+      },
+      "RedisStorageSolution" : {
+          "IP" : "127.0.0.1",
+          "PORT" : "6379"
+      }
+  ],
+  "DATA_DISTRIBUTION_POLICY":ROUND_ROBIN_POLICY
 }
