--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -66,13 +66,15 @@ jobs:
         source_dir=${GITHUB_WORKSPACE}
         log_dir=${HOME}/work/log
         mkdir -p $log_dir
-
+        echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf"
         echo "${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf" > ${log_dir}/server.log
         nohup ${source_dir}/build/symbios_server ${source_dir}/conf/symbios.conf >> ${log_dir}/server.log 2>&1 &
         SERVER_PID=$!
         echo $SERVER_PID > ${log_dir}/server.lock
+        echo "sleeping for 5 seconds"
         sleep 5
+        echo "$source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf"
         $source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf
-
+        echo "Killing server"
         kill `cat ${log_dir}/server.lock`
         rm ${log_dir}/server.lock
