--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: jcernuda/symbios:1.0.0
+      ports: 
+        - 9000:9000
     strategy:
       matrix:
         mongodb-version: [4.4]
@@ -73,6 +75,7 @@ jobs:
         echo $SERVER_PID > ${log_dir}/server.lock
         echo "sleeping for 5 seconds"
         sleep 5
+        cat ${log_dir}/server.log
         echo "$source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf"
         $source_dir/build/test/unit/unit_client ${source_dir}/conf/symbios.conf
         echo "Killing server"
