--- a/conf/symbios.conf
+++ b/conf/symbios.conf
@@ -1,6 +1,6 @@
 {
-  "SERVER_LISTS": "/tmp/tmp.BUKlhPiLxF/conf/server_lists/symbios_server",
-  "CLIENT_LISTS": "/tmp/tmp.BUKlhPiLxF/conf/server_lists/symbios_client" ,
+  "SERVER_LISTS": "/home/runner/work/symbios/symbios/conf/server_lists/symbios_server",
+  "CLIENT_LISTS": "/home/runner/work/symbios/symbios/conf/server_lists/symbios_client" ,
   "SYMBIOS_PORT": 9000,
   "SERVER_RPC_THREADS": 10,
   "SERVER_DIR": "/dev/shm/hari/symbios_server"
